refactor(server): 抽离 voice-server-core 核心模块